--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,6 +6,7 @@
   margin-left: auto;
   cursor: pointer;
   border: none;
+  outline: none;
   background-image: url(../../../images/profile-add-button.svg);
   background-size: cover;
   background-color: #000;
