--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,6 +7,7 @@
   margin-bottom: 8px;
   cursor: pointer;
   border: none;
+  outline: none;
   background-image: url(../../../images/profile-edit-button.svg);
   background-size: cover;
   background-color: #000;
