--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,6 +2,7 @@
   max-width: 282px;
   margin: 0;
   padding: 0;
+  position: relative;
   border-radius: 10px;
   overflow: hidden;
   background-color: #fff;
