--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,5 +1,5 @@
 .popup__submit-button {
-  margin-top: 18px;
+  margin-top: 48px;
   padding: 0;
   width: 100%;
   height: 50px;
@@ -22,9 +22,17 @@
   opacity: .8;
 }
 
+.popup__submit-button:disabled {
+  cursor: default;
+  border: 1px solid #000;
+  background-color: #fff;
+  color: #000;
+  opacity: .2;
+}
+
 @media screen and (max-width: 767px) {
   .popup__submit-button {
-    margin-top: 15px;
+    margin-top: 45px;
     height: 46px;
     font-size: 14px;
     line-height: 17px;
